delete functin all redundant
