# src/db/models/user.js
@@ -3,12 +3,12 @@ import { emailRegexp } from '../../constants/user.js';
 
 const usersSchema = new Schema(
   {
-    name: { type: String, required: true },
+    name: { type: String },
     email: { type: String, match: emailRegexp, requirerd: true, unique: true },
     password: { type: String, requirerd: true },
-    gender: { type: String, required: true },
-    daylyNorm: { type: String, required: true },
-    photo: { type: String, required: true },
+    gender: { type: String },
+    daylyNorm: { type: String },
+    photo: { type: String },
     // verify: { type: Boolean, default: false, required: true },
   },
   { timestamps: true, versionKey: false },
