# src/routers/users.js
@@ -3,8 +3,7 @@ import { Router } from 'express';
 
 const router = Router();
 import {
-    usersAllControl, userByIdControl, createUserController,
-    deleteUserControl, upsertUserControl, patchUserControl
+     userByIdControl, createUserController, patchUserControl
 } from '../controllers/users.js';
 import { ctrlWrapper } from '../utils/ctrlWrapper.js';
 import { createUsersCard, updateUsersCard } from '../validation/user.js';
@@ -14,10 +13,8 @@ import { isValidId } from '../middlewares/isValidId.js';
 import { upload } from '../middlewares/multer.js';
 
 // router.use(authenticate);
-router.get('/', ctrlWrapper(usersAllControl));
 router.get('/:id', isValidId, ctrlWrapper(userByIdControl));
 router.post('/', upload.single('photo'), validateBody(createUsersCard), ctrlWrapper(createUserController));
-router.put('/:id', isValidId, upload.single('photo'), validateBody(updateUsersCard), ctrlWrapper(upsertUserControl));
 router.patch('/:id', isValidId, upload.single('photo'), validateBody(updateUsersCard), ctrlWrapper(patchUserControl));
-router.delete('/:id', isValidId, ctrlWrapper(deleteUserControl));
+
 export default router;
